--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,9 @@ dependencies:
     sdk: flutter
   
   provider: ^4.0.4
+  firebase_auth: ^0.14.0+5
+  cloud_firestore: ^0.12.9+4
+  firebase_core: ^0.4.4+3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
